<resources>
    <string name="app_name">OnePass</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one">ONE</string>
    <string name="pass">PASS</string>
    <string name="bottom_line">The only password manager youll ever needs</string>
    <string name="generatePass">GENERATE SECURE PASSWORD</string>
    <string name="homeFragText">Stop using unsecure password for your online\n accounts level up with OnePas. Get the most secure\n and difficult-to-crack password</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="submit">SUBMIT</string>
    <string name="nbr_text">1 2 3</string>
    <string name="log_text">Let’s get you setup with a new account!</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="new_password">New Password</string>
    <string name="name">NAME</string>
    <string name="forgetpass">Forgot Password</string>
    <string name="resetpass">RESET\nPASSWORD</string>
    <string name="forgetpass1">FORGET\nPASSWORD</string>
    <string name="dontAccount">Don’t have an account yet?</string>
    <string name="already_account">Already have an account?</string>
    <string name="resetlinktext">The link to reset your password has been sent to your email.
        Check your email to reset your password.</string>
    <string name="description">Stop using unsecure passwords for your online accounts, level up with OnePass.
        Get the most secure and difficult-to-crack passwords.</string>
    <string name="reset">RESET</string>
    <string name="resend">RESEND</string>
    <string name="storePass">Passwords\nStored</string>
    <string name="passcompromised">Passwords\nCompromised</string>
    <string name="idPass">5</string>
    <string name="idPascomp">0</string>
    <string name="webText">Facebook</string>
    <string name="update">UPDATE</string>

    <string-array name="peter">
        <item>Peter</item>
        <item>Hafeez</item>
        <item>Khalil</item>
    </string-array>

</resources>