<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neutral_dark"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LogInFragment">
    <ImageView
        android:id="@+id/top_Nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:contentDescription="@null"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logoHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_Nav" />
    <TextView
        android:id="@+id/logodesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:fontFamily="@font/poppins"
        android:text="@string/log_text"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/neutral_gray"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoHeading" />
    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logodesc"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="hafeezn@gmail.com"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        android:background="@drawable/layout_butn_shape"
        android:textColorHint="@color/neutral_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/emailText"/>

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInput1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:cursorColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordText"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:textColor="@color/white"
            android:padding="@dimen/_10sdp"
            android:inputType="textPassword"
            android:background="@drawable/layout_butn_shape"
            android:textColorHint="@color/neutral_gray"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/forgetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetpass"
        android:fontFamily="@font/poppins"
        android:textColor="@color/primary_default"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutInput1"/>

    <TextView
        android:id="@+id/logIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/login"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:textColor="@color/white"
        android:padding="@dimen/_10sdp"
        android:backgroundTint="@color/primary_default"
        android:background="@drawable/button_shape"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/forgetText"/>
    <TextView
        android:id="@+id/dontHaveAcount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dontAccount"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logIn"/>

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:fontFamily="@font/poppins"
        android:textColor="@color/primary_default"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dontHaveAcount"/>


</androidx.constraintlayout.widget.ConstraintLayout>