<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neutral_dark"
    tools:context=".fragments.LogInFragment">

    <ImageView
        android:id="@+id/top_Nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:contentDescription="@null"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card1"
        android:layout_width="@dimen/_128sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/textfield_shape"
        android:backgroundTint="@color/gry2"
        app:layout_constraintEnd_toStartOf="@+id/card2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_Nav">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/idPass"
            android:textColor="@color/primary_default"
            android:textSize="@dimen/_25sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/storePass"
            android:textColor="@color/primary_default"
            android:textSize="@dimen/_15sdp" />


    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card2"
        android:layout_width="@dimen/_128sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:backgroundTint="@color/gry2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card1"
        app:layout_constraintTop_toBottomOf="@id/top_Nav">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/idPascomp"
            android:textColor="@color/primary_default"
            android:textSize="@dimen/_25sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/passcompromised"
            android:textColor="@color/primary_default"
            android:textSize="@dimen/_15sdp" />

    </com.google.android.material.card.MaterialCardView>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/layout_butn_shape"
        android:queryHint="Search Websites"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/lastConst"
        app:layout_constraintTop_toBottomOf="@id/searchView">

        <ImageView
            android:id="@+id/searchImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:src="@drawable/search"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bottomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:fontFamily="@font/bebas_neue"
            android:text="NO RESULTS"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchImage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:visibility="gone"
            android:text="We couldn’t find anything. Try searching for something else."
            android:textColor="@color/neutral_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bottomText" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/webRecycle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/websites_lists" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lastConst"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/bottomConst"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/neutral_dark"
            app:cardBackgroundColor="@color/neutral_gray"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="30sp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_35sdp"
                android:src="@drawable/home" />

            <ImageView
                android:id="@+id/profileImg"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="30sp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_225sdp"
                android:src="@drawable/user" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_40sdp"
            android:backgroundTint="@color/primary_default"
            app:cardCornerRadius="@dimen/_60sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/addImg"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:src="@drawable/add" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>