<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neutral_dark"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignUpFragment">
    <ImageView
        android:id="@+id/top_Nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:contentDescription="@null"
        android:src="@drawable/back_erro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/logoHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:fontFamily="sans-serif-medium"
            android:text="ADD NEW"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/white"
            android:visibility="gone"
            android:textSize="@dimen/_30sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_Nav" />

        <TextView
            android:id="@+id/logoHeading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/update"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_30sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_Nav" />




        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoHeading2"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Facebook"
        android:padding="@dimen/_10sdp"
        android:inputType="text"
        android:textColor="@color/white"
        android:background="@drawable/layout_butn_shape"
        android:textColorHint="@color/neutral_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/nameText"/>



    <TextView
        android:id="@+id/urlText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="URL"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/urlEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="www.facebook.com"
        android:padding="@dimen/_10sdp"
        android:inputType="text"
        android:textColor="@color/white"
        android:background="@drawable/layout_butn_shape"
        android:textColorHint="@color/neutral_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/urlText"/>
    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email/User Name"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/urlEditText"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="hafeezn@gmail.com"
        android:padding="@dimen/_10sdp"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:background="@drawable/layout_butn_shape"
        android:textColorHint="@color/neutral_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/emailText"/>

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInput1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        app:cursorColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordText"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:textColor="@color/white"
            android:padding="@dimen/_10sdp"
            android:inputType="textPassword"
            android:background="@drawable/layout_butn_shape"
            android:textColorHint="@color/neutral_gray"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/generateNew"
        style="@style/button_theme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="20dp"
        android:paddingStart="@dimen/_30sdp"
        android:paddingEnd="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="GENERATE NEW"
        android:textColor="@color/primary_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutInput1" />

    <TextView
        android:id="@+id/logIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="ADD PASSWORD"
        android:textStyle="bold"
        android:visibility="gone"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:textColor="@color/white"
        android:padding="@dimen/_10sdp"
        android:backgroundTint="@color/primary_default"
        android:background="@drawable/button_shape"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/logIn2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="SAVE CHANGES"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:textColor="@color/white"
        android:padding="@dimen/_10sdp"
        android:backgroundTint="@color/primary_default"
        android:background="@drawable/button_shape"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>